cmake_minimum_required(VERSION 3.29)
project(1_Intro)

set(CMAKE_CXX_STANDARD 20)

add_executable(1_helloworld 1_helloworld.cpp)
add_executable(1_variables 2_variables.cpp)
add_executable(1_const 3_const.cpp)
add_executable(1_namespace 4_namespace.cpp)
add_executable(1_typedef 5_typedef.cpp)

add_executable(1_userinput 6_userinput.cpp)
add_executable(1_hypotenuse 7_hypotenuse.cpp)
